# clasp

./: .dockerignore  CONTRIBUTING-BINDINGS.md  README-clbind-awesome-cpp.md
.github/workflows/: generate-and-test-bindings.yml
ci/: build-and-test.sh
ci/docker/: Dockerfile.bindgen
extensions/: .gitignore
extensions/awesome/fmt/: CMakeLists.txt  METADATA  README.md
extensions/awesome/fmt/lisp/: fmt.lisp
extensions/awesome/fmt/src/: fmt_bindings.cc
extensions/awesome/fmt/tests/: test-fmt.lisp
extensions/awesome/json/: CMakeLists.txt  METADATA  README.md
extensions/awesome/json/lisp/: json.lisp
extensions/awesome/json/src/: json_bindings.cc
extensions/awesome/json/tests/: test-json.lisp
extensions/awesome/spdlog/: CMakeLists.txt  METADATA  README.md
extensions/awesome/spdlog/lisp/: spdlog.lisp
extensions/awesome/spdlog/src/: spdlog_bindings.cc
extensions/awesome/spdlog/tests/: test-spdlog.lisp
tools/bindgen/: COMMANDS.md  HOW_TO_ADD_A_LIBRARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  TEST_RESULTS.md  UPSTREAM_MERGE_SAFETY.md  generate_bindings.py  repo-mapping.yaml  requirements.txt  update.sh
